oc-yaml/app-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2022-01-16T19:59:23Z"
  generation: 2
  labels:
    app: myapp2
    app.kubernetes.io/component: myapp2
    app.kubernetes.io/instance: myapp2
  name: myapp2
  namespace: cicd
  resourceVersion: "60140"
  uid: 90707ed6-dd0a-4b8c-9080-7d4958221c71
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: myapp2
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: myapp2
    spec:
      containers:
      - image: docker.io/kornkitti/express-hello-world
        imagePullPolicy: Always
        name: myapp2
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-01-16T19:59:30Z"
    lastUpdateTime: "2022-01-16T19:59:30Z"
    message: Deployment config has minimum availability.
    status: "True"
    type: Available
  - lastTransitionTime: "2022-01-16T19:59:31Z"
    lastUpdateTime: "2022-01-16T19:59:31Z"
    message: replication controller "myapp2-1" successfully rolled out
    reason: NewReplicationControllerAvailable
    status: "True"
    type: Progressing
  details:
    causes:
    - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
