oc-yaml/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: "2022-01-16T18:47:48Z"
  labels:
    app: express-hello-world
    app.kubernetes.io/component: express-hello-world
    app.kubernetes.io/instance: express-hello-world
    app.kubernetes.io/name: express-hello-world
    app.kubernetes.io/part-of: express-hello-world-app
    app.openshift.io/runtime-version: latest
  name: express-hello-world
  namespace: cicd
  resourceVersion: "38782"
  uid: bab50cd7-5ba4-4fc4-a0f2-d689cd83af78
spec:
  clusterIP: 10.217.4.184
  clusterIPs:
  - 10.217.4.184
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: express-hello-world
    deploymentconfig: express-hello-world
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
